# telegram-scraper-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.cursor/rules/: api-endpoints.mdc  project-structure.mdc  python-style.mdc  testing.mdc
.github/workflows/: ci.yml
scripts/: create_session.py
src/: config.py  dependencies.py  main.py
src/api/: router.py
src/api/endpoints/: channels.py  health.py  search.py  users.py
src/core/: exceptions.py  middleware.py  retry.py  session_pool.py
src/schemas/: telegram.py
src/services/: telegram.py
tests/: conftest.py
tests/api/: test_channels.py  test_health.py  test_search.py
tests/core/: test_exceptions.py  test_middleware.py
tests/integration/: test_telegram.py
tests/services/: test_telegram.py
